Assets/style.css
:root {
    --gold: #D4AF37;
    --silver: #C0C0C0;
    --bronze: #cd7f32;
    --electric-lime: #ccff00;
    --jet-black: #0A0A0A;
}

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

body {
    background-color: var(--jet-black);
    color: black;
    font-family: 'Times New Roman', Times, serif;
}

/*Main Styles*/

/*Header Section*/

header{
    height: 1200px;
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem 1.5rem;
}

.hamburger {
    display: none;
    
}

.bar{
    display: block;
    width: 25px;
    height: 3px;
    margin: 5px auto;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
    background-color: #101010;
}

.nav-menu{
    display: flex;
    justify-content: space-between;
    align-items: center;

    background-color: var(--electric-lime);
}

.nav-item {
    margin-left: 3rem;
    list-style: none;
    padding: 1rem;
}

.nav-link {
    font-size: 2rem;
    font-weight: 1000;
    color: black;

}

.nav-link:hover {
    color: #482ff7;
}

.logo {
    text-decoration: underline;
    color: var(--electric-lime);
    font-size: 3rem;
}

#main-img {
    height: 1280px;
    width: 100%;
    background: url(../Assets/images/index.v1.jpg) ;
}

#welcome {
    background-color: var(--jet-black);
    color: var(--electric-lime);
    width: 20rem;
    height: 10rem;

    position: absolute;
    left: 4rem;
    bottom: 40rem ;


}

#text-box {
    background-color: var(--jet-black);
    color: var(--electric-lime);
    width: 15rem;
    height: 13rem;
    text-align: center;
    

    position: absolute;
    bottom: 25rem;
    left: 4rem;
}

#text-box a{
    position: relative;
    top: 1rem;
    color: var(--electric-lime);
    text-decoration: none;
    font-size: 2rem;
    text-transform: uppercase;
}

#main-content {
    display: flex;
    flex-wrap: wrap;
    background-color: var(--electric-lime);
}

#main-content h2 {
    text-align: center;
    border-bottom: 2px solid var(--electric-lime);
    font-size: 3rem;
    margin: 15px 0;
}

#main-content hr {
    border-top: 2px dotted var(--electric-lime);
}

#up-races {
    background-color: var(--jet-black);
    color: var(--electric-lime);
    width: 50rem;
    height: 41rem;
    border: 4px solid var();
    overflow: scroll;
    display: flex;
    flex-direction: column;
    align-self: flex-start;
    text-align: center;
    font-size: 2rem;
    margin-top: 25px;
    margin-left: 25px;
}

#up-races p {
    margin-top: 1rem;
    margin-bottom: 4px;
}

#track {
        display: flex;
        flex-direction: column;
        align-self: flex-start;
        margin-top: 26px;
        margin-left: 6rem;
        width: 54rem;
}

#leader-sec{
    background-color: var(--jet-black);
    color: var(--electric-lime);
    width: 54rem;
    height: 53rem;
    border: 4px solid black;
    display: flex;
    flex-direction: column;
    align-self: flex-start;
    margin-top: 30px;
    margin-left: 6rem;
        
}

.leader img {
    float: left;
    margin-top: 3rem;
    margin-bottom: 1rem;
    margin-left: 2rem;
}

.position-1st {
    float: left;
    position: relative;
    top: 50%;
    font-size: 5rem;
    border: 1px solid black;
    width: 8rem;
    background-color: var(--gold);
    text-align: center;
}

.position-2nd {
    float: left;
    position: relative;
    top: 50%;
    font-size: 5rem;
    border: 1px solid black;
    width: 8rem;
    background-color: var(--silver);
    text-align: center;
}

.position-3rd {
    float: left;
    position: relative;
    top: 50%;
    font-size: 5rem;
    border: 1px solid black;
    width: 8rem;
    background-color: var(--bronze);
    text-align: center;

}

#trophy {
        display: flex;
        flex-direction: column;
        align-self: flex-start;
        margin-top: 30px;
        margin-left: 25px;
        width: 50rem;
        height: 50rem;
}

#last-result {
    background-color: var(--jet-black);
    color: var(--electric-lime);
    width: 50rem;
    height: 54rem;
    border: 4px solid black;
    display: flex;
    flex-direction: column;
    align-self: flex-start;
    margin-top: 25px;
    margin-left: 25px;
}

.result img {
    float: left;
}

#result{
    display: flex;
        flex-direction: column;
        align-self: flex-start;
        margin-top: 25px;
        margin-left: 6rem;
        width: 54rem;
        height: 54rem;
}

#column {
    background-color: var(--electric-lime);
    display: flex;
    align-items: flex-start;
    flex-wrap: wrap;
}

.rider-sec {
    width: 49%;
    height: 300px;
    display: flex;
    margin-bottom: 25px;
    border: 1px solid black;
    margin-left: 8px;
}

.team-head {
    align-self: center;
    margin-left: 2rem;
}
    
.rider {
    text-align: justify;
    width: 160px;
    padding: 25px;
    margin-left: 4rem;
    white-space: nowrap;
}

.rider img {
    display: block;
}

#table {
    background-color: var(--electric-lime);
    color: var(--jet-black);
    height: 1000px;
    
    display: flex;
    align-items: flex-start;
    flex-wrap: wrap;
}

table, th, td  {
    border: 1px solid black;
    text-align: center;
    margin: 2rem auto;
    border-collapse: collapse;
}

#table-1 {
    margin-left: 4rem;
}

#champ-head{
    text-align: center;

}

#table-2 {
    margin-top: 5px;
    margin-left: 4rem;
}

#anno-head{
    text-align: center;
    
}

#table-3 {
    margin-top: -10rem;
    margin-left: 4rem;
}

#con-head {
    text-align: center;
}

tr:hover {
    background-color: crimson;
}

.gold{
    background-color: var(--gold);
}

.silver{
    background-color: var(--silver);
}

.bronze {
    background-color: var(--bronze);
}

.ret {
    background-color: red;
}

td:nth-child(2) {
    text-align: left;
}

/*
tr td:nth-child(5), th:nth-child(5) {
    display: none;
}*/

#sign-up {
    height: 50rem;
    width: 100%;
    position: relative;
}

#form-image {
    height: 50rem;
    width: 100%;
    background: url(../Assets/images/form-image.jpg) no-repeat center top;
}

#signup-form {
    margin:350px 350px;
    padding: 50px;
    width: 300px;

    color: white;
    background-color: grey;

    position: absolute;
    top: 0px;
    right: 0px;
}

#signup-form h2 {
    color: black;
    margin-top: 0;
}

.text-input {
    background-color: grey;
    color: white;
    width: 100%;

    border: 1px solid white;
    margin: 2px 0 15px
}

#submit {
    text-align: center;
    margin-top: 2px;
    padding: 8px 15px;
    background-color: blue;
    color: white;
}

#socials {
    display: flex;
    align-content: center;
    justify-content: center;

    background-color: var(--electric-lime);
}

#socials li {
    list-style: none;
}

#socials i {
    font-size: 2rem;
    margin: 1px;
    padding: 4rem;
    color: var(--jet-black);
}

@media only screen and (max-width: 768px) {
.nav-menu {
        position: fixed;
        left: -100%;
        top: 5rem;
        flex-direction: column;
        background-color: #fff;
        width: 100%;
        border-radius: 10px;
        text-align: center;
        transition: 0.3s;
        box-shadow:0 10px 27px rgba(0, 0, 0, 0.05);
        }
    
.nav-menu.active {
        left: 0;
        }
    
.nav-item {
        margin: 2.5rem 0;
        }
    
.hamburger {
        display: block;
        cursor: pointer;
        }

.hamburger.active .bar:nth-child(2) {
    opacity: 0;
}

.hamburger.active .bar:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
}

.hamburger.active .bar:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
}

#table {
    background-color: grey;
    height: 1700px;

    display: flex;
    flex-direction: column;
    
}

#table-1 {
    
}

#table-3{
    margin-top: 1rem;
}

}

